--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "react-native start",
-    "dos2unix": "find . -type f -exec dos2unix {} \\;"
+    "dos2unix": "find . -type f -exec dos2unix {} \\;",
+    "lint": "standard --verbose | snazzy"
   },
   "dependencies": {
     "lodash": "^3.10.1",
@@ -12,5 +13,10 @@
   },
   "standard": {
     "parser": "babel-eslint"
+  },
+  "devDependencies": {
+    "babel-eslint": "^4.1.6",
+    "snazzy": "^2.0.1",
+    "standard": "^5.4.1"
   }
 }
