--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "redux": "^3.0.4",
     "redux-logger": "^2.3.1",
     "redux-promise": "^0.5.0",
-    "redux-thunk": "^1.0.2"
+    "redux-thunk": "^1.0.2",
+    "superagent": "^1.6.1"
   },
   "standard": {
     "parser": "babel-eslint",
