--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel": "^6.0.15",
     "lodash": "^3.10.1",
     "react-native": "github:exponentjs/react-native#2015-11-13",
+    "react-native-icons": "^0.7.0",
     "react-redux": "^3.1.0",
     "redux": "^3.0.4",
     "redux-logger": "^2.3.1",
