--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "react-redux": "^3.1.0",
     "redux": "^3.0.4",
     "redux-logger": "^2.3.1",
-    "redux-promise": "^0.5.0",
-    "redux-thunk": "^1.0.2",
+    "redux-saga": "^0.3.3",
     "superagent": "^1.6.1"
   },
   "standard": {
